# micronaut-flyway-r2dbc

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: ci.yml  docs.yml  main-branch.yml  release.yml  snapshot.yml
docs/: CONFIGURATION.md  RELEASE.md
examples/example-r2dbc-fallback/: build.gradle.kts
examples/example-r2dbc-fallback/src/main/kotlin/: Application.kt
examples/example-r2dbc-fallback/src/main/resources/: application.yml
examples/example-r2dbc-fallback/src/main/resources/db/migration/: V1__create_user_table.sql
site-docs/: README.md  mkdocs.yml  pyproject.toml
site-docs/docs/: index.md
site-docs/docs/core-concepts/: how-it-works.md
site-docs/docs/development/: release-process.md
site-docs/docs/getting-started/: configuration.md  installation.md  quick-start.md
src/main/kotlin/us/charliek/flyway/: FlywayR2dbcMigrator.kt
src/main/kotlin/us/charliek/flyway/configuration/: FlywayR2dbcConfigurationProperties.kt  FlywayR2dbcConnectionResolver.kt
src/main/kotlin/us/charliek/flyway/converter/: ConverterRegistry.kt  PostgresqlConverter.kt  R2dbcToJdbcConverter.kt
src/main/kotlin/us/charliek/flyway/exception/: FlywayR2dbcConfigurationException.kt  FlywayR2dbcMigrationException.kt  UnsupportedDatabaseException.kt
src/test/kotlin/us/charliek/flyway/integration/: FlywayR2dbcIntegrationTest.kt
src/test/resources/: application-test.yml
src/test/resources/db/migration/: V1__create_test_table.sql  V2__add_test_data.sql
(+2 files in other folders)
